compiler/tests/fa/errors/redefine_fa.salam
// EXPECT: خطا۰۶۱
// LANG: fa
تابع کار():
پایان
تابع کار():
پایان
تابع اصلی:
    چاپ 1
پایان
